MongoDB Doubts resolved

--- a/NodeJS/Notes/15. Working with MongoDB.md
+++ b/NodeJS/Notes/15. Working with MongoDB.md
@@ -301,10 +301,7 @@ We create a `POST` API which adds the `Document` to the Instance of the model cr
 > > // to its string representation
 > > console.log(objectId1.equals('65f1b8e8a9b8c7d6e6f5a4b3')); 
 > > // TRUE
-> > 
 > > ```
-
-
 
 > `__v` 
 > 
@@ -320,14 +317,10 @@ We create a `POST` API which adds the `Document` to the Instance of the model cr
 > > 
 > > Add `versionKey: false` to the schema options to the Model. The Documents of this Model won't be having `__v`
 
-
-
 > The number of underscores is a visual cue:
 > 
 > - `_` : This is a special field managed by the MongoDB.(`_id`)
 > - `__`: This is an internal field managed by the Mongoose library, and you generally shouldn't touch it.(`__v`)
-
-
 
 ### Writing Dynamic(user_input) data to the Database
 
@@ -448,6 +441,36 @@ app.get("/getUser", async (req,res)=>{
 > 1 -> Ascending , -1 -> Desecending
 > ```
 
+### Selecting Output Fields (also known as the query "projection")
+
+use `.select` Specifies which document fields to include or exclude from the results of the query.
+
+When using string syntax, prefixing a path with `-` *will flag that path as excluded*. When a path *does not have the `-` prefix, it is included.*
+
+When using object Notation, 
+
+- **`1` (or `true`) means INCLUDE:** "Only give me these specific fields."
+- **`0` (or `false`) means EXCLUDE:** "Give me all fields *except* for these specific ones."
+
+```js
+// include a and b, exclude other fields
+query.select('a b');
+// Equivalent syntaxes:
+query.select(['a', 'b']);
+query.select({ a: 1, b: 1 });
+
+// exclude c and d, include other fields
+query.select('-c -d');
+```
+
+>  `NOTE`
+> 
+> **A projection must be either inclusive or exclusive**. In other words, you must either list the fields to include (which excludes all others), or list the fields to exclude (which implies all other fields are included).
+> 
+> You cannot perform `query.select(" c -d")`
+> 
+> The `_id` field is the only exception you can include/exclude the `_id`irrespective whether all other fields are excluded or included   avoid including `_id` in projection using `select{_id:0}` or `select("-_id")` . 
+
 ### Limiting the Results
 
 This is known as Pagination, we use query params in the route this will pass the page number according to which we skip the documents
@@ -457,6 +480,63 @@ Form mongoose we use the methods `.skip()` and `.limit()` to get the right no. o
 > `NOTE`
 > 
 > Always Sanitize the limit value if from the user Input a large number could consumes a long time to retrieve all the docs within the limit. Attackers use this to hang the DB server
+
+
+
+> `.skip(Number)`
+> 
+> Specifies the number of documents to skip.
+
+
+
+> `.limit(Number)`
+> 
+> Specifies the maximum number of documents the query will return.
+
+
+
+> `NOTE`
+> 
+> `skip()` and `limit()` Cannot be used with `distinct()`
+> 
+> `skip()` and `limit()` operates on a cursor of documents, but `distinct()` returns a single array of values, not a cursor.
+> 
+> >  A **cursor** is a pointer to a result set of **documents** on the MongoDB server.
+> 
+> since `distinct()` doesn't return a cursor of documents, there is nothing to "skip" or "limit" on the server side.
+
+
+
+### Leaning the Documents
+
+The lean option tells Mongoose *to skip hydrating the result documents*. This makes queries faster and less memory intensive, but the **result documents are plain old JavaScript objects (POJOs), not Mongoose documents**
+
+> **Hydration** is the process of taking raw, plain JavaScript data from MongoDB and "inflating" it into a full, intelligent Mongoose document.
+> 
+> When you run a query like `Model.find()` or `Model.findOne()`, Mongoose gets the raw JSON-like data from the MongoDB driver. *It then automatically performs hydration, creating a new instance of your Model for each document returned.*
+> 
+> | Feature              | Hydrated Mongoose Document (Default)                                 | Plain JavaScript Object (from `.lean()`)                                                |
+> | -------------------- | -------------------------------------------------------------------- | --------------------------------------------------------------------------------------- |
+> | **What is it?**      | **A rich object with Mongoose's *special properties and methods*.**  | A plain, fast, "dumb" JavaScript object.                                                |
+> | **Instance Methods** | **Yes.** You can call `.save()`, `.deleteOne()`, `.populate()`, etc. | **No.** It's just data; it has no Mongoose methods.                                     |
+> | **Performance**      | Slower, with higher memory usage due to object overhead.             | **Much faster** and uses significantly less memory.                                     |
+> | **Use Case**         | When you need to **read a document, modify it, and save it back.**   | For high-performance, **read-only** operations where you just need to display the data. |
+> | **Size**             | Heavier                                                              | Lighter                                                                                 |
+> | **Virtuals**         | **Yes.** Virtual properties you define in your schema will exist.    | **No.** Virtuals are not calculated or attached.                                        |
+> | **Getters/Setters**  | **Yes.** Custom getters and setters in your schema will run.         | **No.** You only get the raw data from the database.                                    |
+> | **Middleware**       | **Yes.** `pre('save')` and `post('save')` hooks will fire.           | **No.** There are no hooks because there is no `.save()` method.                        |
+
+using `.lean()` tells Mongoose to skip instantiating a full Mongoose document and just give you the POJO (plain old JavaScript object).
+
+
+
+> **Populate and Lean**
+> 
+> Populate works with `lean()`. If you use both `populate()` and `lean()`, the `lean` option propagates to the populated documents as well.
+> 
+> **but after using lean there just POJO they don't have ref left how does it populate then?**
+> 
+>  A POJO has no `ref`. But by the time you get the POJO, Mongoose has already used the schema to do its work. since `lean()` is the after the `populate()` , `lean()` skips hydration for populated documents itself. 
 
 ## Deleting form the Model
 
