--- a/NodeJS/Notes/20. Connecting MongoDB Collections.md
+++ b/NodeJS/Notes/20. Connecting MongoDB Collections.md
@@ -1,6 +1,12 @@
 # Connecting Collections
 
-TO connect Collections use `ref:"Collection_name"` in the Schema of required filed you would like to act as an bridge to the other Collection.
+> ## Populating Documents
+> 
+> Populating is the process of *automatically replacing references (the `ObjectId`s) in a document with the actual documents (associated with the same `ObjectId`) from another collection.*
+> 
+> Any field can be used in place of `ObjectId` but **it is the most common and highly recommended way.**
+
+To connect Collections use `ref:"Collection_name"` in the Schema of required filed you would like to act as an bridge to the other Collection.
 
 For Example connecting `Connection` to `User` via `fromId` 
 
@@ -74,4 +80,4 @@ Map over each document and only send the `bridge_field.required_field`
 const data = requests.map(doc => "Request From "+doc.fromUserId.firstName)
 ```
 
-# 
+ 
