--- a/NodeJS/Notes/17. Authentication(JWT).md
+++ b/NodeJS/Notes/17. Authentication(JWT).md
@@ -208,3 +208,9 @@ module.exports = {
     auth_middleware
 }
 ```
+
+
+
+### Deleting a Cookie
+
+For a browser to delete a cookie, the options used to clear it (like `path` and `httpOnly`) must perfectly match the options used when it was created.
