Axios Doubts Cleared

--- a/NodeJS/Notes/14. REST APIs.md
+++ b/NodeJS/Notes/14. REST APIs.md
@@ -137,6 +137,8 @@ GET (and HEAD) is idempotent, which means that making multiple identical request
 > 
 > GET should never modify any resources on the server.
 
+`GET` requests are for retrieving data from a server. According to the HTTP standard, they should not have a request body. Any parameters you need to send should be in the URL itself (as path parameters or query strings).
+
 ### PUT
 
 PUT is most-often utilized for *update* capabilities.  
