--- a/NodeJS/Notes/22. Connecting Backend to Fronetend.md
+++ b/NodeJS/Notes/22. Connecting Backend to Fronetend.md
@@ -1,6 +1,78 @@
 # Connecting Backend to Frontend
 
-## Using axios
+## Using Axios
+
+Axios is a very popular JavaScript library used to make HTTP requests. It is a simple `promise based HTTP client` for the browser and node.js.
+
+It is **isomorphic** ( can run both on the server and the client.)  It can run in the browser and node.js with the same codebase. On the server-side it uses the native node.js `http` module, while on the client (browser) it uses XMLHttpRequest.
+
+
+
+> `XMLHttpRequest` (often abbreviated as XHR) is a built-in API available in web browsers. It's an `object` that provides a way for client-side JavaScript to *make HTTP requests to a server and receive responses*, **all in the background without needing to reload the entire web page**
+
+### Why axios when we have fetch()
+
+| Feature                                                                                | `fetch()`                                                                                                                                                                                                | `axios`                                                                                                                                                                                                                                      |
+| -------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **JSON Data**                                                                          | You must **manually convert data.** For requests, you use `JSON.stringify()`. For responses, you must call `response.json()`.                                                                            | **Automatic.** It automatically converts JavaScript objects to JSON for requests and parses JSON responses back into objects.                                                                                                                |
+| **Error Handling*****                                                                  | **The promise only rejects on network failure**. For HTTP errors like `404` (Not Found) or `500` (Server Error), the promise *resolves*, and you must manually check `response.ok` or `response.status`. | **Simpler.** The promise rejects for both network failures and HTTP error statuses (4xx and 5xx). This means you can handle *all errors in a single `.catch()` block.*                                                                       |
+| **Interceptors**(functions that are automatically run for every request or  response ) | Not available natively. You would have to write your own wrapper functions to achieve this.                                                                                                              | **Built-in.** You can "intercept" requests before they are sent or responses before they are processed. This is incredibly useful for tasks like automatically adding an `Authorization` token to every request or for global error logging. |
+| **Request Timeout**                                                                    | No built-in timeout. You have to implement it yourself using `AbortController` and `setTimeout`.                                                                                                         | **Simple configuration.** You can just set a `timeout` property in your request config, and Axios will handle it.                                                                                                                            |
+| **Request Cancellation**                                                               | Supported via `AbortController`, which you manage yourself.                                                                                                                                              | **Built-in support** for `AbortController`. It's easy to integrate and manage.                                                                                                                                                               |
+| **Progress Tracking**                                                                  | Not easily available for uploads. You can track download progress with Readable Streams, but it's complex.                                                                                               | **Built-in.** Provides `onUploadProgress` and `onDownloadProgress` options, making it easy to show progress bars for file uploads/downloads.                                                                                                 |
+| **Browser Support**                                                                    | *Only in modern browsers.* You need a "polyfill" (extra code) to make it work in older browsers like IE11.                                                                                               | **Excellent.** It works in all modern browsers and even older ones because it uses the older `XMLHttpRequest` API, which has been around for a long time.                                                                                    |
+
+### axios Automatic JSON Conversion
+
+The happens through two default configuration options called **`transformRequest`** and **`transformResponse`**. These are arrays of functions that Axios runs automatically.
+
+1. **`transformRequest`**: An array of functions that are applied to the request `body` *before* it is sent to the server.
+2. **`transformResponse`**: An array of functions that are applied to the response `data` *after* it is received from the server but *before* it's passed to your `.then()` block.
+
+![](..\..\Notes-Images\Axios%20JSON%20Transformation.png)
+
+> HTTP headers are key-value pairs sent in HTTP requests and responses, providing essential information about the communication between the client and server.
+
+
+
+### Axios Syntax
+
+Pair it with `aync/await` and alwasy make api_calls under `try-catch` block 
+
+```js
+const function_Name = async ()=>{
+    try{
+    const {data:identifier} = await axios.method(url*,body_obj,config_obj)
+    }
+    catch(e){
+     //Handle the error
+    }
+    
+}
+```
+
+> `NOTE`
+> 
+> **Argument Order**: The order of `body_obj` and `config_obj` depends on the method you use.
+> 
+> - For `POST`, `PUT`, `PATCH`: The signature is `axios.post(url, data, config)`. The data/body comes second.
+>   
+>   
+> - For `GET`, `DELETE`, `HEAD`: The signature is `axios.get(url, config)`. *There is no request body, so the config object is the second argument.*
+
+
+
+### Paths are Case Sensitive
+
+ A URL has several parts:
+
+`http://www.example.com/Users/Profile?id=123`
+
+1. **Scheme (`http://`) and Host (`www.example.com`)**: These parts are **case-insensitive**. Your browser and servers will treat `HTTP://EXAMPLE.COM` the same as `http://example.com`.
+
+2. **Path (`/Users/Profile`)**: This part is **case-sensitive**. The server treats `/Users/Profile` and `/users/profile` as two completely different endpoints.
+
+
 
 install `axios` in frontend repo 
 
@@ -10,7 +82,7 @@ npm install axios
 
 use it to make calls rather than fetch
 
-## Solving cors
+## Solving CORS
 
 install `cors` in backend repo and add the below on top in express server file
 
@@ -19,7 +91,6 @@ const cors = require("cors")
 const app = express()
 
 app.use(cors())
-
 ```
 
 Even Though CORS enabled , we can't process or create tokens/cookie ita a Browser Security feature for non secure networks 
