backend Doubts Solved, Tanstack Query
- Explored Tanstack Query For Efefctive handling of Data and Rendering States.

--- a/NodeJS/Notes/13 Builing Industry Grade Projects/4. Customizig Routes.md
+++ b/NodeJS/Notes/13 Builing Industry Grade Projects/4. Customizig Routes.md
@@ -134,3 +134,12 @@ app.use("/form", (req,res)=>{
     res.send("Form Successfully submitted")
 }) 
 ```
+
+
+
+> **Will Paths from React-Router and Express API Routes Conflict If Identical**
+> 
+> **They don't conflict because they operate in different environments and at different times.**
+> 
+> - **Express API routes** are handled on the **server**.
+> - **React Router paths** are handled in the **browser** (the client).
