--- a/NodeJS/Notes/17. Authentication(JWT).md
+++ b/NodeJS/Notes/17. Authentication(JWT).md
@@ -209,7 +209,19 @@ module.exports = {
 }
 ```
 
-
+>  **What if User Logins Daily, and When Cookie Expired user needs to login Again ?**
+> 
+>  If you set a cookie to expire in 7 days, it will expire on the 7th day regardless of the user's activity. The way to fix this is not to "extend" the cookie's life, but to **replace it with a new one on each visit**.
+> 
+> ### The Core Principle: Overwrite, Don't Modify
+> 
+> You cannot directly modify a cookie that is already on a user's browser. Instead, on every authenticated request from an active user, your server should:
+> 
+> 1. Verify their existing session cookie (e.g., a JWT).
+> 2. If it's valid, generate a **brand new cookie** with the **same name** but a **new expiration date** (e.g., 7 days from the *current* moment).
+> 3. Send this new cookie back with the response.
+> 
+> The browser will automatically see the new cookie with the same name and overwrite the old one, effectively "sliding" the expiration window forward.
 
 ### Deleting a Cookie
 
