Understood Process of Staging Changes in Git

--- a/NodeJS/Notes/23. NodeJS Environments.md
+++ b/NodeJS/Notes/23. NodeJS Environments.md
@@ -12,25 +12,20 @@ The `NODE_ENV` environment variable is the standard way to signal which enviro
 You can access the value of `NODE_ENV` anywhere in your Node.js application through the global `process.env` object.
 
 > - **`npm run dev`**: This is your new development command. It sets `NODE_ENV` to `development`
->   
->   
+> 
 > - **`npm start`**: This is your production command. It sets `NODE_ENV` to `production`.
 
 Conditionally using `NODE_ENV`
 
 ```js
-
-
 // This code will ONLY run if NODE_ENV is NOT 'production'
 if (process.env.NODE_ENV !== 'production') {
   console.log('We are in development mode! Verbose logging enabled.');
-  
+
 }
 
 // This code will run in ALL environments
 console.log('This message will always be shown.');
-
-
 ```
 
 ## The PROBLEM with `NODE_ENV`
@@ -56,16 +51,11 @@ function calculatePrice(user, product) {
 
   return price;
 }
-
 ```
 
 This is a terrible practice. The `calculatePrice` function now behaves **differently in development than it does in production**. *A test that passes in development might fail in production because the numbers are different*. You can no longer trust your staging environment to be a true representation of production.
 
-
-
 However, this doesn't mean `NODE_ENV` is useless or should be avoided entirely. It means we must use it for its intended purpose: **to control the behavior of the *build tools and external libraries*, not the core logic of your application.**
-
-
 
 ### The Solution : Feature Flags
 
@@ -94,5 +84,305 @@ A feature flag is simply a variable (usually from an environment variable or a c
 Feature flag to immediately stop a component in case of code failure or Disasters.
 
 Usually feature fags ae used for a short period time ( until a new stable version of project is released) then remove these feature flags in order to  decrease the quantity of code.
+
+
+
+## When To Use What
+
+### **1. Application Logic (Business Layer)**
+
+This is where your product lives — pricing, authentication, routing, user experience, etc.  
+
+> **Do not ever** use `process.env.NODE_ENV` (or `import.meta.env.MODE`) to change logic that users rely on. 
+> 
+> **Always** use it for things a *developer* needs—like hot reload, debug overlays, mock APIs, or your layout visualizer.
+
+Why? Because:
+
+- It corrupts trust in your staging and QA environments.
+
+- Your dev and prod logic start diverging.
+
+- You can’t replicate bugs across environments because they literally behave differently.
+
+### **2. Build & Tooling Layer**
+
+This is where **it’s absolutely fine**—and actually *expected*—to use `NODE_ENV` or `import.meta.env.MODE`.
+
+Vite, Webpack, Babel, PostCSS… all use it to decide how to *bundle*, *optimize*, or *strip code*.
+
+For example:
+
+`if (import.meta.env.DEV) {  import('./layout-visualizer.css'); // purely visual, dev-only }`
+
+That’s not an anti-pattern. You’re not changing app logic; you’re changing the developer’s **debugging experience**.  
+The production app still behaves the same—only slimmer, faster, and without the dev baggage.
+
+
+
+
+## Toggling in a VITE Bundler
+
+So let’s talk **Vite** and keeping “dev-only” files (like your layout visualizer CSS) out of production bundles.
+
+---
+
+### **1. Use environment-based imports**
+
+Vite gives you `import.meta.env.MODE` and `import.meta.env.DEV` out of the box.  
+That’s your switch between *development* and *production*. Consider we want to control Layout Dev-needs 
+
+**Example:**
+
+```js
+// main.js
+if (import.meta.env.DEV) {
+  import('./path_to-dev-needs');
+}
+```
+
+This ensures `dev-needs` is **only loaded during dev**.  
+When you build for production (`vite build`), Vite tree-shakes this import away.
+
+---
+
+### **2. Use `.env` files wisely**
+
+Create two env files in your project root:
+
+```
+.env.development
+.env.production
+```
+
+Inside `.env.development`:
+
+```
+VITE_SHOW_LAYOUT=true
+```
+
+Inside `.env.production`:
+
+```
+VITE_SHOW_LAYOUT=false
+```
+
+Then in your code:
+
+```js
+if (import.meta.env.VITE_SHOW_LAYOUT === 'true') {
+  import('./layout-visualizer.css');
+}
+```
+
+This gives you explicit control—great when you have more dev-only utilities later (like console overlays, dummy data injectors, etc.).
+
+---
+
+### **3. Put dev-only assets in a dedicated folder**
+
+Keep your sanity:
+
+```
+src/
+  devtools/
+    layout-visualizer.css
+    grid-overlay.js
+  components/
+  pages/
+```
+
+Then exclude that folder during build:
+
+```js
+// vite.config.js
+export default {
+  build: {
+    rollupOptions: {
+      external: import.meta.env.PROD ? ['src/devtools/*'] : []
+    }
+  }
+}
+```
+
+(You can also automate it using plugins—more below.)
+
+---
+
+### **4. Use the `vite-plugin-conditional-compile` plugin**
+
+If you want to go fancy, this plugin lets you wrap dev-only code like this:
+
+```js
+// #if process.env.NODE_ENV === 'development'
+import './layout-visualizer.css';
+// #endif
+```
+
+Vite strips that out automatically at build.  
+Install it with:
+
+```bash
+npm i vite-plugin-conditional-compile
+```
+
+Then configure in `vite.config.js`.
+
+---
+
+### **5. Double-check the final bundle**
+
+After building:
+
+```bash
+vite build --analyze
+```
+
+This opens a visual bundle analyzer. If you see your dev CSS or helper scripts there, something’s leaking.
+
+---
+
+### 
+
+## Handling Logs in Different Environment
+
+We don't want Logs to be production which shall reveal the internals of the project.
+so here use the below secure Logger
+
+```js
+import pino from 'pino';
+import { clean } from '@coffeeandfun/remove-pii';
+
+const regexRedactors = [
+  /\btoken\s*[:=]\s*["']?[\w\-\.]+["']?/gi,
+  /\b(api[-_]?key|secret)\s*[:=]\s*["']?[\w\-\.]+["']?/gi,
+  /\bBearer\s+[A-Za-z0-9\-\._]+/gi,
+  /\bpass(word)?\s*[:=]\s*["']?[^"\s]+["']?/gi,
+  /\${[^}]+}/g, // template literal placeholder
+];
+
+function redactDynamicStrings(str) {
+  let sanitized = str;
+  for (const pattern of regexRedactors) {
+    sanitized = sanitized.replace(pattern, '[REDACTED]');
+  }
+  return sanitized;
+}
+
+// Preprocessor
+function sanitizeInput(args) {
+  return args.map((arg) => {
+    if (typeof arg === 'object') {
+      return clean(arg);
+    } else if (typeof arg === 'string') {
+      return redactDynamicStrings(clean(arg));
+    }
+    return arg;
+  });
+}
+
+const env = import.meta.env.MODE;
+const isProd = import.meta.env.PROD;
+
+const logger = pino({
+  level: isProd ? 'warn' : 'debug',
+  redact: {
+    paths: ['auth.token', 'user.email', 'headers.authorization', 'config.apiKey'],
+    censor: '[REDACTED]',
+  },
+  browser: { asObject: true, write: () => {} },
+});
+
+export const secureLogger = {
+  debug: (...args) => !isProd && console.debug(...sanitizeInput(args)),
+  info: (...args) => !isProd && console.info(...sanitizeInput(args)),
+  warn: (...args) => console.warn(...sanitizeInput(args)),
+  error: (...args) => console.error(...sanitizeInput(args)),
+
+  invite: () => {
+    if (isProd) {
+      console.log(
+        '%c🤝 Interested in contributing? Visit https://github.com/yourrepo',
+        'color:#15803d;font-weight:bold;font-size:14px;'
+      );
+    }
+  },
+};
+
+if (isProd) secureLogger.invite();
+
+export default secureLogger;
+
+```
+
+the above config even sanitizes the output such that no sensitive or critical info is revealed in production.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
